--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -7,7 +7,9 @@ sources:
               authHeader: Authorization
               authSecret: $openapi_doc_auth_token
         overlays:
-            - location: gusto_embedded/.speakeasy/speakeasy-modifications-overlay.yaml
+            - location: https://raw.githubusercontent.com/Gusto/Gusto-Partner-API/refs/heads/main/.speakeasy/speakeasy-modifications-overlay.yaml
+              authHeader: Authorization
+              authSecret: $openapi_doc_auth_token
         registry:
             location: registry.speakeasyapi.dev/gusto/ruby-sdk/gusto-embedded-oas
 targets:
