--- a/gusto_embedded/.speakeasy/gen.yaml
+++ b/gusto_embedded/.speakeasy/gen.yaml
@@ -31,4 +31,4 @@ ruby:
   maxMethodParams: 4
   module: GustoEmbedded
   outputModelSuffix: output
-  packageName: gusto_embedded
+  packageName: gusto_embedded_client
